--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="6Ymdz52j3TCncztyfGW3xT76nJUAkE4WoGk_sa7GaQU" />
     <title>Document</title>
 </head>
 <body>
